# metachat

./: .env.example  README.md  USER_GUIDE.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/analyze_document_20251226/: architecture_aim.md  architecture_solver.md  architecture_webapp.md  data_flow.md  metadata.json  refactoring_proposals.md
conductor/archive/config_mgmt_20251226/: metadata.json  plan.md  spec.md
conductor/archive/openrouter_support_20251226/: metadata.json  plan.md  spec.md
conductor/archive/refactor_core_20251226/: metadata.json  spec.md
docs/: config.md
metachat-aim/: README.md
metachat-aim/agent/: cot_iterative.py  cot_iterative_materials.py  cot_iterative_tools.py  cot_iterative_tools_materials.py  standard_agent.py  standard_agent_tools.py
metachat-aim/tests/: test_aim_config.py
metachat_core/: README.md  pyproject.toml
metachat_core/agent/: __init__.py  base.py  cot_iterative.py
metachat_core/config/: __init__.py  factory.py  settings.py
metachat_core/core/models/: __init__.py  anthropic.py  base.py  llama.py  openai.py  openrouter.py  vllm.py
metachat_core/core/tools/: __init__.py  base.py  design.py  design_db.py
metachat_core/tests/: run_all.py  test_config.py  test_factory.py  test_openrouter.py  test_openrouter_agent.py  test_openrouter_config.py  test_openrouter_export.py  test_openrouter_implementation.py  test_scaffolding.py  test_vllm_config.py  test_vllm_model.py
web-app/: README.md  main.py
web-app/tests/: test_webapp_config.py
(+24 files in other folders)
