[tool.poetry]
name = "metachat-core"
version = "0.1.0"
description = "Core library for MetaChat agentic framework"
authors = ["Robert Lupoiu"]
readme = "README.md"
packages = [{include = "metachat_core"}]

[tool.poetry.dependencies]
python = ">=3.10"
openai = "^1.54.4"
anthropic = "^0.39.0"
pydantic = "^2.10.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
tiktoken = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"